# haskell-constraints

./: README.md
debian/jessie/: cabal.config
debian/wheezy/: cabal.config
platform/2012.2.0.0/: cabal.config
platform/2012.4.0.0/: cabal.config
platform/2013.2.0.0/: cabal.config
platform/2014.2.0.0/: cabal.config
utils/: .gitignore  BuildDeb.hs  README.md  utils.cabal
