name:                utils
version:             0.1.0.0
description:         helper executables for haskell-constraints
license:             GPL-3
license-file:        LICENSE
author:              Antoine Latter
maintainer:          aslatter@gmail.com
copyright:           Copyright 2014 Antoine Latter
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable builddebs
  main-is:             BuildDeb.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base,
                       bytestring,
                       containers,
                       lens,
                       split,
                       tagsoup,
                       wreq
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -Wall
